# 202200129_LAB_SO1_2S2025_PROYECTO3_FINAL

./: .gitignore  COMANDOS.txt  Dockerfile.valkey-proxy  GRAFANA_ACCESO_OPCIONES.md  GRAFANA_ALTERNATIVA_SIN_PLUGIN.md  GRAFANA_CONFIGURACION_REDIS.md  GRAFANA_DASHBOARD_GUIA.md  GRAFANA_INSTRUCCIONES_QUE_FUNCIONAN.md  GUIA_LOCUST_GRAFANA_ES.md  INSTRUCCIONES_CLOUDSHELL.md  INSTRUCCIONES_FINALES.md  Proyecto-3-SOPES ENUNCIADO.md  README.md  access-grafana.sh  build-and-push-v2.sh  build-and-push.sh  build-push-dockerhub.sh  build-push-images.sh  check-grafana-credentials.sh  create-grafana-admin.sh  create-grafana-dashboard.sh  dashboard-grafana.json  dashboard-redis-completo.json  deploy-k8s-docker.sh  deploy-k8s.sh  deploy-valkey-proxy.sh  diagnose-grafana.sh  fix-deployment.sh  fix-grafana-external-access.sh  fix-image-issues.sh  generate-test-data.sh  grafana-dashboard-manual.json  grafana-port-forward.sh  locustfile.py  new-grafana-instance.sh  reset-grafana.sh  run-locust-cloudshell.sh  run-locust-headless.sh  run-locust.sh  setup-grafana-ingress.sh  (+5 more)
api-rust/: Cargo.toml  Dockerfile
api-rust/src/: main.rs
go-grpc-client/: Dockerfile  go.mod  go.sum  main.go
go-kafka-consumer/: Dockerfile  go.mod  go.sum  main.go
go-kafka-writer/: Dockerfile  go.mod  go.sum  main.go
go-rabbitmq-consumer/: Dockerfile  go.mod  go.sum  main.go
go-rabbitmq-writer/: Dockerfile  go.mod  go.sum  main.go
grafana/: dashboard.json
k8s/: 0-namespaces.yaml  1-nginx-ingress.yaml  10-ingress.yaml  (+10 more)
proyecto3/rust-api/: Cargo.toml  Dockerfile
proyecto3/rust-api/src/: main.rs
(+81 files in other folders)
