[package]
name = "api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# reqwest para llamar al servicio de Go
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
# Para logs
env_logger = "0.10"
log = "0.4"